# DependencyGraph

./: .pre-commit-config.yaml  .python-version  README.md  pyproject.toml  readthedocs.yml  setup.cfg  test.dot
dependency_graph/: __init__.py  classes.py  functions.py
doc/: conf.py  dependency_graph.rst  index.rst  modules.rst
tests/: test_dependency_graph.py  test_simple.py
