[tool.poetry]
name = "dependency-graph"
version = "0.1.0"
description = ""
authors = ["Imanol Sardón <sardondelgadoimanol@gmail.com>"]
include = [
    "pyproject.toml"
]

[tool.poetry.dependencies]
python = "^3.7"
pydotplus = "^2.0.2"
toml = "^0.10.0"

sphinx = { version = "^2.1", optional = true }
sphinx_rtd_theme = { version = "^0.4.3", optional = true }
m2r = {version = "^0.2.1", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
xdoctest = "^0.9.1"
flake8-docstrings = "^1.3.1"
pydocstyle = ">=4.0"
black = {version = "^19.3b0", allows-prereleases = true}
isort = {version = "^4.3", extras = ["pyproject"]}
seed-isort-config = "^1.9"
pytest-cov = "^2.7"
pytest-mock = "^1.10"
coverage = "^4.5"
tox = "^3.13"
towncrier = "^19.2"
pre-commit = "^1.17"
sphinx = "^2.1"
sphinx_rtd_theme = "^0.4.3"
toml = "^0.10.0"
darglint = "^0.5.7"
docutils = "<0.15.1" # temporary hot patch

[tool.poetry.extras]
doc = ["sphinx", "sphinx_rtd_theme", "m2r"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.idea
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
known_first_party = 'dependency-graph'
known_third_party = ["pydotplus"]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py37

[testenv]
whitelist_externals = poetry
commands =
    poetry install -vvv
    poetry run pytest
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
